fixed banner alignment

--- a/css/double_site.css
+++ b/css/double_site.css
@@ -409,6 +409,7 @@
 
     #banner-content {
       max-width: 600px;
+      align-self: center;
     }
 
     @media screen and (max-width: 1100px) {
